tests/NormalTests/paczka1/small_fuzzy/37821685.err
Error in line 1: zTcQL0 S381 92,7
Error in line 2: zTcQL0 A15 81,4
Error in line 6: vp3S S470 33,5
